--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "chatide",
-  "publisher": "ChatIDE",
-  "displayName": "ChatIDE - Coding Assistant (GPT/ChatGPT, Claude)",
-  "description": "ChatIDE is an open-source coding and debugging assistant that supports GPT/ChatGPT (OpenAI), and Claude (Anthropic). Supported models: [gpt4, gpt-3.5-turbo, claude-v1.3]. Import/export your conversation history. Bring up the assistant in a side pane by pressing cmd+shift+i.",
-  "version": "0.2.8",
+  "name": "haama",
+  "publisher": "KKJ",
+  "displayName": "Haama - 나만의 AI Coding 비서 (Codellama, Llama2, Synatra(한국어-KoLLM))",
+  "description": "Haama는 AI Coding 비서로 코드 생성 및 디버깅을 혁신적으로 지원한다. 지원 모델: [Codellama:7B, Codellama:34B, Llama2, Synatra:7B(한국어-KoLLM)]. Import/export your conversation history. Bring up the assistant in a side pane by pressing cmd+shift+i.",
+  "version": "1.0.4",
   "license": "MIT",
-  "icon": "assets/icon.jpg",
+  "icon": "assets/hana2.png",
   "engines": {
     "vscode": "^1.77.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yagil/ChatIDE"
+    "url": "https://github.com/eunminbb/Haama"
   },
   "categories": [
     "Other"
   ],
   "keywords": [
-    "anthropic",
-    "claude",
-    "chatgpt",
-    "gpt",
-    "gpt4",
-    "gpt3",
-    "openai",
+    "llama2",
+    "codellama",
+    "ollama",
     "ai",
     "agi",
     "artificial-intelligence",
@@ -41,63 +37,43 @@
   "contributes": {
     "commands": [
       {
-        "command": "chatide.start",
-        "title": "Start ChatIDE"
+        "command": "haama.start",
+        "title": "Start Haama"
       },
       {
-        "command": "chatide.openSettings",
-        "title": "Open ChatIDE Settings"
-      },
-      {
-        "command": "chatide.updateOpenAiApiKey",
-        "title": "Update your OpenAI API Key for ChatIDE"
-      },
-      {
-        "command": "chatide.updateAnthropicApiKey",
-        "title": "Update your Anthropic API Key for ChatIDE"
+        "command": "haama.openSettings",
+        "title": "Open Haama Settings"
       }
     ],
     "keybindings": [
       {
         "key": "cmd+shift+i",
-        "command": "chatide.start",
+        "command": "haama.start",
         "when": "editorTextFocus"
       }
     ],
     "configuration": {
-      "title": "ChatIDE",
+      "title": "haama",
       "properties": {
-        "chatide.model": {
+        "haama.model": {
           "order": 0,
           "type": "string",
-          "default": "gpt-3.5-turbo",
+          "default": "codellama",
           "enum": [
             "codellama",
             "llama2",
-            "gpt-3.5-turbo",
-            "gpt-3.5-turbo-16k",
-            "gpt-4",
-            "gpt-4-0613",
-            "gpt-4-32k",
-            "claude-v1.3",
-            "claude-v1.3-100k",
-            "custom"
+            "synatra:7b"
           ],
           "enumDescriptions": [
-            "CodeLlama(Ollama)",
-            "GPT 3.5 (OpenAI)",
-            "GPT 3.5 (16K context)",
-            "GPT 4 (OpenAI)",
-            "GPT 4 0613 (OpenAI)",
-            "GPT 4 (32K context)",
-            "Claude v1.3 (Anthropic)",
-            "Claude v1.3 (100K context)",
-            "Custom LLM Server (OpenAI Compatible)"
+            "CodeLlama:7B(Ollama)",
+            "Llama2(Ollama)",
+            "Synatra:7B(Ollama)"
+
           ],
-          "description": "Select the AI model. You must have your own API key to use a model.",
+          "description": "Select the AI model.",
           "scope": "window"
         },
-        "chatide.systemPrompt": {
+        "haama.systemPrompt": {
           "order": 1,
           "type": "string",
           "default": "You are a helpful programming assistant running inside VS Code. The assistant always generates accurate and succinct messages. The assistant doesn't repeat previous information, and doesn't launch into long explanations unless asked. Important: Always provide code inside triple backticks.",
@@ -106,7 +82,7 @@
           "editorType": "string",
           "editorMultiline": true
         },
-        "chatide.maxLength": {
+        "haama.maxLength": {
           "order": 2,
           "type": "integer",
           "default": 1000,
@@ -114,7 +90,7 @@
           "description": "Set the maximum length for the generated text (aka max_tokens).",
           "scope": "window"
         },
-        "chatide.temperature": {
+        "haama.temperature": {
           "order": 3,
           "type": "number",
           "default": 0,
@@ -123,26 +99,19 @@
           "description": "Set the temperature for controlling the randomness of the generated text.",
           "scope": "window"
         },
-        "chatide.highlightedCodeAwareness": {
+        "haama.highlightedCodeAwareness": {
           "order": 4,
           "type": "boolean",
           "default": false,
           "description": "[Experimental] Automatically include highlighted code in the prompt.",
           "scope": "window"
         },
-        "chatide.pressEnterToSend": {
+        "haama.pressEnterToSend": {
           "order": 5,
           "type": "boolean",
           "default": false,
           "description": "When enabled, pressing enter will send the message in the input box. Shift + Enter will insert a new line. When this option is not selected, you must click the 'Send' button.",
           "scope": "window"
-        },
-        "chatide.customServerUrl": {
-          "order": 6,
-          "type": "string",
-          "description": "Custom OpenAI-compatible server URL (Example http://localhost:1234/v1). Note: '/chat/completions' will be appended to the URL.",
-          "scope": "window",
-          "editorType": "string"
         }
       }
     }
@@ -176,7 +145,6 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.4.3",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.167",
     "marked": "^4.3.0",
